--- a/register.html
+++ b/register.html
@@ -7,27 +7,27 @@
 	<div class="register">
   	    <label>Name</label>
 	    <br>
-	    <input placeholder="Enter Name" />
+	    <input id="name" placeholder="Enter Name" />
 	    <br>
 	    <label>Password</label>
 	    <br>
-	    <input placeholder="Enter Password" />
+	    <input type="password" id="password" placeholder="Enter Password" />
 	    <br>
 	    <label>Confirm Password</label>
 	    <br>
-	    <input placeholder="Enter Password Again" />
+	    <input type="password" id="confirmpassword" placeholder="Enter Password Again" />
 	    <br>
 	    <label>Email</label>
 	    <br>
-	    <input placeholder="Enter email" />
+	    <input id="email" placeholder="Enter email" />
 	    <br>
 	    <label>Mobile Number</label>
 	    <br>
-	    <input placeholder="Enter mobile number" />
+	    <input id="phone" placeholder="Enter mobile number" />
 	    <br>
 	    <label>AGE</label>
 	    <br>
-	    <input placeholder="Enter age" />
+	    <input id="age" placeholder="Enter age" />
 	    <br>
 	    <label>Address</label>
 	    <br>
@@ -36,9 +36,9 @@
 	    <label>Gender</label>
 	    <br>
 	    <select>
-	    <option>Male</option>
-	    <option>Female</option>
-	    <option>Others</option>
+	    <option value="1">Male</option>
+	    <option value="2">Female</option>
+	    <option value="3">Others</option>
 	    </select>
 	    <br>
         <label>Specialist</label>
