--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 	<br>
 	<label>Password</label>
 	<br>
-	<input placeholder="Enter Password" />
+	<input type="password" id="password" placeholder="Enter Password" />
 	<br>
 	<button> Submit </button>
 	<br>
