--- a/home.html
+++ b/home.html
@@ -12,16 +12,14 @@
             <img style="padding-left:100px;width:240px;height:240px;" src="./images/child.jpeg"   >
             <img style="padding-left:300px;width:240px;height:240px;" src="gynacol.jpeg"   >
             <br><br>
-            <b style="color:blue;padding-left:150px"> PEDIATRICIAN </b>
-            <b style="color:blue;padding-left:425px"> GYNECALOGIST </b>
-
-
-
-
-
-            
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+            <a href="peditrician.txt" target="right"> PEDIATRICIAN </a> 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+            <a href="gynec.txt" target="right"> GYNECALOGIST </a>
+            <!--<button style="color:blue;padding-left:150px"> PEDIATRICIAN </b> 
+            <button style="color:blue;padding-left:425px"> GYNECALOGIST </b> -->
         </p>
-        <p></p>
     </div>
     </body>
 </html>
