--- a/knhhospital.html
+++ b/knhhospital.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <head>
     <title> webpage </title>
+
 </head>
-    <frameset rows="20%,80%">
+    <frameset rows="20%,*">
         <frame src="main.html" name="main">
-            <frameset cols="15%,80%">
+            <frameset cols="15%,*">
                 <frame src="left.html" name="left">
                 <frame src="right.html" name="right">
             </frameset>
